--- a/frontend/src/src/components/modal/modal.css
+++ b/frontend/src/src/components/modal/modal.css
@@ -24,6 +24,7 @@
   overflow-x: hidden;
   overflow-y: auto;
   outline: 0;
+  text-align: center;
 }
 
 .modalbox {
@@ -32,7 +33,8 @@
   position: relative;
   margin: 1.75rem auto;
   border-radius: 10px;
-  max-width: 500px;
+  width: 80vw;
+  max-width: 45em;
   padding: 1rem;
   padding-top: 0.5rem;
 }
