Add further small screen/phone support

--- a/frontend/src/src/stylesheets/pages/flexgrid.css
+++ b/frontend/src/src/stylesheets/pages/flexgrid.css
@@ -9,7 +9,6 @@
 }
 
 
-
 .flex-grid .col-list {
  flex-direction: column;
 }
@@ -35,13 +34,12 @@
 }
 
 .flex-grid-adaptive .left {order:1; flex-basis:100%}
+.flex-grid-adaptive .middle {order:2; flex-basis:100%}
+.flex-grid-adaptive .right {order:3; flex-basis:100%}
 
-.flex-grid-adaptive .middle {order:3; flex-basis:100%}
 
-.flex-grid-adaptive .right {order:2; flex-basis:100%}
-
-.flex-grid-adaptive .position-box-left {order:2; flex-basis:100%}
-.flex-grid-adaptive .shopping-box-right {order:1; flex-basis:100%; margin-bottom:20px}
+.flex-grid-adaptive .position-box-left {order:2; flex-basis:100%; min-height:300px;}
+.flex-grid-adaptive .shopping-box-right {order:1; flex-basis:100%; margin-bottom:20px;}
 
 @media screen and (min-width:1200px) {
    .flex-grid-adaptive {
@@ -52,24 +50,28 @@
         flex-basis:200px;
         order:1;
     }
+
     .flex-grid-adaptive .middle {
         flex-basis:1;
         order:2;
     }
+
     .flex-grid-adaptive .right {
         flex-basis:200px;
         order:3;
     }
 
     .flex-grid-adaptive .position-box-left {
-	order:2;
+	order:1;
 	flex-basis:100%;
 	margin-right:20px;
+	min-height:10px;
     }
 
     .flex-grid-adaptive .shopping-box-right {
-	order:3;
+	order:2;
 	flex-basis:40%;
+	margin-bottom:0px;
     }
 
 }
