--- a/frontend/src/src/stylesheets/components/positions/positioncard.css
+++ b/frontend/src/src/stylesheets/components/positions/positioncard.css
@@ -1,13 +1,24 @@
+.page-content {
+  background-color: #E8E4D3;
 
+}
+
+.btn-continue {
+  background-color: #cc503c !important;
+  color: #E8E4D3 !important;
+}
 
 .position-entry {
   position: relative;
   display: flex;
   flex-direction: column;
-  min-width: 0;
+  min-width: 300px;
+  width: 25vw;
+  min-height: 200px;
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
+  margin: 5px;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.7rem;
 }
@@ -15,4 +26,27 @@
 .position-entry:hover {
   background-color: #f1f9ff;
 
+}
+
+
+.landing-text {
+  padding-left: 20px;
+}
+
+
+@media (max-width: 600px) {
+  .some-pic  {
+    display: none !important;
+  }
+
+  .landing-text {
+    width: 100vw;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+
+  .position-entry{
+    width: 85vw;
+
+  }
 }
