--- a/frontend/src/src/stylesheets/components/positions/positioncard.css
+++ b/frontend/src/src/stylesheets/components/positions/positioncard.css
@@ -12,7 +12,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  min-width: 300px;
+  min-width: 270px;
   width: 25vw;
   min-height: 200px;
   word-wrap: break-word;
@@ -33,6 +33,10 @@
   padding-left: 20px;
 }
 
+.customAccordian{
+  min-width: 50vw;
+  max-width: 90vw;
+}
 
 @media (max-width: 600px) {
   .some-pic  {
@@ -46,7 +50,20 @@
   }
 
   .position-entry{
-    width: 85vw;
-
+    width: 90vw;
   }
+
+  .landingAccordion{
+    width: 90vw;
+  }
+
+}
+
+
+@media (max-width: 1200px) {
+
+  .landingAccordion{
+    width: 80vw;
+  }
+
 }
