--- a/frontend/src/src/stylesheets/pages/flexgrid.css
+++ b/frontend/src/src/stylesheets/pages/flexgrid.css
@@ -36,9 +36,12 @@
 .flex-grid-adaptive .middle {order:2; flex-basis:100%}
 .flex-grid-adaptive .right {order:3; flex-basis:100%}
 
+.flex-grid-adaptive .image-left {order:2; flex-basis:100%}
+.flex-grid-adaptive .text-right {order:3; flex-basis:100%}
+
 
 .flex-grid-adaptive .position-box-left {order:1; flex-basis:100%; min-height:300px;}
-.flex-grid-adaptive .shopping-box-right {order:0; flex-basis:100%; margin-bottom:20px; padding-left: 2vw}
+.flex-grid-adaptive .shopping-box-right {order:0; flex-basis:100%; margin-bottom:20px}
 
 
 @media screen and (min-width:1200px) {
@@ -62,20 +65,31 @@
     }
 
     .flex-grid-adaptive .position-box-left {
-	order:2;
+	order:1;
 	flex-basis:100%;
 	margin-right:20px;
 	min-height:10px;
     }
 
     .flex-grid-adaptive .shopping-box-right {
-	    order:1;
-	    flex-basis:20%;
-	    margin-bottom:0px;
-        margin-left: 5vw;
-        min-width: 25vw;
+	order:2;
+	flex-basis:20%;
+	margin-bottom:0px;
+        min-width: 20vw;
+    }
 
+    .flex-grid-adaptive .image-left {
+	order:1;
+	flex-basis:40%;
+	margin-right:20px;
+	min-height:10px;
+     }
 
+    .flex-grid-adaptive .text-right {
+	order:2;
+	flex-basis:60%;
+	margin-bottom:0px;
+        min-width: 20vw;
     }
 
 }
