Sections without positions are not shown on on landingpage

--- a/frontend/src/src/stylesheets/components/positions/positioncard.css
+++ b/frontend/src/src/stylesheets/components/positions/positioncard.css
@@ -38,6 +38,21 @@ a:hover {
   flex-basis:80%;
 }
 
+.link-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  display: inline;
+  margin: 0;
+  padding: 0;
+  text-align: left;
+}
+
+.link-button:hover,
+.link-button:focus {
+text-decoration: none;
+}
+
 
 @media (max-width: 1200px) {
 
